--- a/templates/articles/index.html.twig
+++ b/templates/articles/index.html.twig
@@ -3,7 +3,7 @@
 
 {% block body %}
   {% if articles %}
-    <table class="table table-striped">
+    <table id="articles" class="table table-striped">
       <thead>
         <tr>
           <th>Article Title</th>
@@ -16,6 +16,8 @@
             <td>{{article.title}}</td>
             <td>
               <a href="/article/{{article.id}}" class="btn btn-dark">Show</a>
+              <a href="/article/edit/{{article.id}}" class="btn btn-light">Edit</a>
+              <a href="#" class="btn btn-danger delete-article" data-id="{{ article.id }}">Delete</a>
             </td>
           </tr>
         {% endfor %}
@@ -24,4 +26,8 @@
   {% else %}
     <p>No articles to display</p>
   {% endif %} 
+{% endblock %}
+
+{% block javascripts %}
+<script src="/js/main.js"></script>
 {% endblock %}
